PostGIS 3.1.0XXXX
2020/XX/XX

Only tickets not included in 3.1.0alpha1

* Breaking changes *
  -

* New features *
  - #4656, Cast a geojson_text::geometry for implicit GeoJSON ingestion (Raúl Marín)

* Enhancements *
  - #4651: ST_Simplify: Don't copy if nothing is removed (Raúl Marín)

* Bug fixes *
  - #4652, Fix several memory related bugs in ST_GeomFromGML (Raúl Marín)

PostGIS 3.1.0alpha1
2020/02/01

* Breaking changes *
  - svn number replaced by git hash in version output
    (Sandro Santilli, Raúl Marín)
  - remove ChangeLog (anyone who needs that much info should refer to git log)
    (Regina Obe)
  - #4577, Drop support for PostgreSQL 9.5 (Raúl Marín)
  - #4579, Drop postgis_proc_set_search_path.pl (Raúl Marín)
  - #4601, ST_TileEnvelope signature changed.
  - #3057, ST_Force3D, ST_Force3DZ, ST_Force3DM and ST_Force4D signatures changed.

* New features *
  - #4601, Add ST_TileEnvelope margin argument (Yuri Astrakhan)
  - #2972, Add quiet mode (-q) to pgsql2shp (Kristian Thy)
  - #4617, Add configure switch `--without-phony-revision` (Raúl Marín)
  - #3057, Optional value params for Force3D*, Force4D functions (Kristian Thy)
  - #4624, ST_HexagonGrid and ST_SquareGrid, set returning functions to
    generate tilings of the plane (Paul Ramsey)

* Enhancements *
  - #4539, Unify libm includes (Raúl Marín)
  - #4569, Allow unknown SRID geometry insertion into typmod SRID column (Paul Ramsey)
  - #4149, ST_Simplify(geom, 0) is now O(N).
           ST_Affine (ST_Translate, ST_TransScale, ST_Rotate) optimized.
           ST_SnapToGrid optimized. (Darafei Praliaskouski)
  - #4574, Link Time Optimizations enabled (Darafei Praliaskouski)
  - #4578, Add parallellism and cost properties to brin functions (Raúl Marín)
  - #4473, Silence yacc warnings (Raúl Marín)
  - #4589, Disable C asserts when building without "--enable-debug" (Raúl Marín)
  - #4543, Introduce ryu to print doubles (Raúl Marín)
  - #4626, Support pkg-config for libxml2 (Bas Couwenberg)